UI Alerts no longer missing. Spacing fix

--- a/html/home.css
+++ b/html/home.css
@@ -115,9 +115,16 @@ body{
     margin-top: 30px;
 }
 
+.control-label {
+    padding-top: 6px;
+}
+.alert {
+    display: none;
+}
+
 .inputItem{
-    margin-top: 0.10px;
-    margin-bottom: 0.10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .btn {
